# py-archive

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
color_kiss/: __init__.py  _constants.py
colors/: README.md  __init__.py  _constants.py  pyproject.toml  utils.py
colors/colors/: utils.py
fast_funcs/: README.md  __init__.py  attr.py  collections.py  io.py  pyproject.toml  search.py  strings.py  types.py
fast_funcs/fast_funcs/: io.py  numbers.py
regex_utils/: __init__.py
regex_utils/customization/: compile.py  extract.py  replace.py  split.py  validate.py
regex_utils/perfomance/: batch.py  benchmark.py  cache.py
regex_utils/utils/: search.py
