[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-archive"
version = "0.1.0"
description = "A collection of Python utilities designed for easy copying and use in your own projects."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Fkernel653"}
]

keywords=[
    "performance",
    "optimization",
    "fast",
    "speed",
    "utilities",
    "tools",
    "archive",
    "python-utilities",
]

io_keywords=[
    "io",
    "fast-io",
    "buffered-io",
    "fast-print",
    "fast-input",
    "write-lines",
    "echo",
]

collections_keywords=[
    "filter",
    "map",
    "flatten",
    "sort",
    "reverse",
    "list-comprehension",
    "data-processing",
    "high-performance",
]

numeric_keywords=[
    "math",
    "precision",
    "float",
    "sum",
    "square",
    "round",
    "accurate-math",
    "numeric",
]

terminal_keywords=[
    "ansi",
    "color",
    "terminal",
    "console",
    "styling",
    "colors",
    "formatting",
    "shell",
    "cli",
    "command-line",
    "pretty-print",
    "rich-text",
    "escape-codes",
]

attr_keywords=[
    "attribute",
    "reflection",
    "getattr",
    "setattr",
    "fast-access",
    "mro-bypass",
]

search_type_keywords=[
    "search",
    "membership",
    "type-checking",
    "isinstance",
    "fast-lookup",
    "set-conversion",
    "early-exit",
]

classifiers=[
    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    # Operating System
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

    # Environment
    "Environment :: Console",
    "Environment :: Console :: Curses",

    # Topic Categories
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",

    # Specific Domains
    "Topic :: System :: Logging",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",

    # Other
    "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/Fkernel653/py-archive"
Repository = "https://github.com/Fkernel653/py-archive.git"
Documentation = "https://github.com/Fkernel653/py-archive#readme"

[tool.hatch.build.targets.wheel]
packages = ["color_kiss", "fast_funcs"]
